# the_hind_terminal

./: .gitignore  README.md  start.sh
bharat-ai/: main.py  requirements.txt  test_groq.py
bharat-core/: Cargo.toml
bharat-core/src/: main.rs
bharat-ui/: package-lock.json  package.json  tailwind.config.ts
bharat-ui/app/: globals.css  layout.tsx  page.tsx
bharat-ui/app/components/: AIChatPanel.tsx  AIFloatingButton.tsx  BharatMap.tsx  BharatMapInner.tsx  CountryIntelPanel.tsx  LayerControl.tsx  LeftPanel.tsx  RightPanel.tsx  TopBar.tsx
bharat-ui/app/guide/: page.tsx
bharat-ui/app/hooks/: useTelemetry.ts
bharat-ui/app/lib/: data.ts
convex/: tracker.tsx
