[package]
name = "bharat-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bharat-core"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
dashmap = "5"
tower = "0.4"
http = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
